# lua-mediapipe

./: .gitignore  BUILD  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  package-lock.json  package.json  project.sublime-project
cmake/: FindCURL.cmake  bazel_tools.cmake  set_startup_project.cmake
docker/manylinux2014/: Dockerfile_aarch64  Dockerfile_x86_64
docs/: docs.md  hosting-you-own-binary-rocks-Linux.md  hosting-you-own-binary-rocks-Windows.md
generator/: LuaGenerator.js  constants.js  ids.json  index.js
generator/declarations/: calculator_graph.js  face_mesh.js  face_mesh_connections.js  hands.js  hands_connections.js  holistic.js  image_frame.js  packet.js  protobuf.js  task_runner.js  timestamp.js
generator/protobuf/: Parser.js  cli.js
lua/: CMakeLists.txt  lua.manifest
luajit/: CMakeLists.txt
luarocks/: CMakeLists.txt  mediapipe_lua-scm-1.rockspec
luarocks/patches/: 001-luarocks-src.patch
luarocks/src/luarocks/admin/: index.lua
mediapipe/: CMakeLists.txt
mediapipe_lua/: CMakeLists.txt  auditwheel_repair.cmake  copy_soname.cmake  install_generated_files.cmake
opencv_hdr_parser/: CMakeLists.txt
patches/: 001-curl-src.patch  001-hdr_parser-src.patch  001-mediapipe-src.patch.in  001-nghttp2-src.patch  001-zlib-src.patch  patch_auditwheel_whitelist.py
samples/: samples-scm-1.rockspec
samples/googlesamples/examples/face_detector/lua/: face_detector.lua
samples/googlesamples/examples/face_landmarker/lua/: [MediaPipe_AutoIt_Tasks]_Face_Landmarker.lua  [MediaPipe_Lua_Tasks]_Face_Landmarker.lua
samples/googlesamples/examples/face_stylizer/lua/: face_stylizer.lua
samples/googlesamples/examples/gesture_recognizer/lua/: gesture_recognizer.lua
samples/googlesamples/examples/hand_landmarker/lua/: hand_landmarker.lua
samples/googlesamples/examples/image_classification/lua/: image_classifier.lua
samples/googlesamples/examples/image_embedder/lua/: image_embedder.lua
samples/googlesamples/examples/image_segmentation/lua/: image_segmentation.lua
samples/googlesamples/examples/interactive_segmentation/lua/: interactive_segmenter.lua
samples/googlesamples/examples/language_detector/lua/: [MediaPipe_AutoIt_Tasks]_Language_Detector.lua  [MediaPipe_Lua_Tasks]_Language_Detector.lua
samples/googlesamples/examples/object_detection/lua/: object_detector.lua
samples/googlesamples/examples/pose_landmarker/lua/: [MediaPipe_AutoIt_Tasks]_Pose_Landmarker.lua  [MediaPipe_Lua_Tasks]_Pose_Landmarker.lua
samples/googlesamples/examples/text_classification/lua/: text_classifier.lua
samples/googlesamples/examples/text_embedder/lua/: text_embedder.lua
scripts/: configure_bazel.js.in  copy_relocate_includes.js  func_kwargs.js  manual.sh  new_version.lua  pack.js  prepublish.js  tasks.sh  test.js  update-readme.js  version.js  wsl_init.sh
src/: file_utils.cpp  lua_bridge.cpp  registration.cpp
src/binding/: calculator_graph.cc  calculator_graph.h  image_frame.h  map_container.cc  map_container.h  message.cc  message.h  packet.cc  packet.h  packet_creator.cc  packet_creator.h  packet_getter.cc  packet_getter.h  repeated_container.cc  repeated_container.h  repeated_container.impl.h  resource_util.cc  resource_util.h  solution_base.cc  solution_base.h  ssize_t.h  text_format.cc  text_format.h  time_series_util.h  util.h  validated_graph_config.h  validated_graphconfig.cc
src/binding/solutions/: download_utils.cc  download_utils.h  drawing_styles.cc  drawing_styles.h  drawing_utils.cc  drawing_utils.h  face_detection.cc  face_detection.h  face_mesh.cc  face_mesh.h  face_mesh_connections.cc  face_mesh_connections.h  hands.cc  hands.h  hands_connections.cc  hands_connections.h  holistic.cc  holistic.h  objectron.cc  objectron.h  pose.cc  pose.h  pose_connections.h  selfie_segmentation.cc  selfie_segmentation.h
src/binding/tasks/audio/: audio_classifier.cc  audio_classifier.h  audio_embedder.cc  audio_embedder.h
src/binding/tasks/audio/core/: audio_task_running_mode.h  base_audio_task_api.cc  base_audio_task_api.h
src/binding/tasks/components/containers/: audio_data.cc  audio_data.h  bounding_box.cc  bounding_box.h  category.cc  category.h  classification_result.cc  classification_result.h  detections.cc  detections.h  embedding_result.cc  embedding_result.h  rect.cc  (+7 more)
src/binding/tasks/core/: base_options.cc  base_options.h  task_info.cc  task_info.h  task_runner.cc  task_runner.h
src/binding/tasks/text/: language_detector.cc  language_detector.h  text_classifier.cc  text_classifier.h  text_embedder.cc  text_embedder.h
src/binding/tasks/vision/: face_aligner.cc  face_aligner.h  face_detector.cc  face_detector.h  face_landmarker.cc  face_landmarker.h  face_stylizer.cc  face_stylizer.h  gesture_recognizer.cc  gesture_recognizer.h  hand_landmarker.cc  hand_landmarker.h  holistic_landmarker.cc  holistic_landmarker.h  image_classifier.cc  image_classifier.h  image_embedder.cc  image_embedder.h  image_segmenter.cc  image_segmenter.h  interactive_segmenter.cc  interactive_segmenter.h  object_detector.cc  object_detector.h  pose_landmarker.cc  pose_landmarker.h
src/include/: lua_bridge.hdr.hpp  lua_bridge.hpp  lua_bridge_common.hdr.hpp  lua_bridge_common.hpp
test/: _assert.lua  _mat_utils.lua  _proto_utils.lua  calculator_graph_test.lua  image_frame_test.lua  image_test.lua  packet_test.lua  solution_base_test.lua  test-scm-1.rockspec  test_utils.lua  timestamp_test.lua
test/solutions/: drawing_utils_test.lua  face_detection_test.lua  face_mesh_test.lua  hands_test.lua  holistic_test.lua  objectron_test.lua  pose_test.lua  selfie_segmentation_test.lua
test/solutions/testdata/: test_on_video_full_asl_hand.full.yml
test/tasks/text/: language_detector_test.lua  text_classifier_test.lua  text_embedder_test.lua
test/tasks/vision/: face_aligner_test.lua  face_detector_test.lua  face_landmarker_test.lua  face_stylizer_test.lua  hand_landmarker_test.lua  holistic_landmarker_test.lua  image_classifier_test.lua  image_embedder_test.lua  image_segmenter_test.lua  interactive_segmenter_test.lua  object_detector_test.lua  pose_landmarker_test.lua
(+10 files in other folders)
